# discrete_active_inference

./: README.md
discrete_ai/: CMakeLists.txt  README.md  package.xml
discrete_ai/action/: AIPBT.action
discrete_ai/demo_object_models/kinect_ros/: model.config  model.sdf
discrete_ai/demo_object_models/models/apple/: model.config  model.sdf
discrete_ai/demo_object_models/models/baskets/: basket.urdf
discrete_ai/demo_object_models/models/block/: model1.urdf  model2.urdf  model3.urdf
discrete_ai/demo_object_models/models/boxes/: paper_box.urdf
discrete_ai/demo_object_models/models/calibration/: model1.urdf  model2.urdf  model3.urdf  model4.urdf  model5.urdf  model6.urdf
discrete_ai/include/: AIRLabAction_nodes.h
discrete_ai/include/behavior_control/: AIRLabAction_nodes.h
discrete_ai/launch/: skills.launch
discrete_ai/msg/: AIPBTAction.msg  AIPBTActionFeedback.msg  AIPBTActionGoal.msg  AIPBTActionResult.msg  AIPBTFeedback.msg  AIPBTGoal.msg
discrete_ai/scripts/: AIP.py  AIPBT_server.py  active_inference_server.py  demo_templates.py  franka_grasp_client.py  franka_release_client.py  grasp_client.py  gripper_client.py  look_to_point.py  marker_detection.py  mpc_client.py  object_spawner.py  paper_examples.py  placeAction.py  placeOnPlateAction.py  pushAction.py  symbolic_perception_server.py  test_gripper.py  tiago_gripper.py  tiago_move_skill.py  tiago_moveit.py  tiago_perception.py  tiago_pick_skill.py  tiago_place_skill.py  tiago_push_skill.py  tiago_reachability.py
discrete_ai/scripts/testing/: AIPBT_client.py  dummy_tests.py  symbolic_perception_client.py  testing.py
discrete_ai/src/: demoBT.cpp
discrete_ai/src/behaviors/: BT_tutorial2.xml  demo.xml  demo_calibration.xml  demo_move.xml  demo_pickPlace.xml  mpc_sequence.xml  my_BT.xml  my_BT_include.xml  stock_shelf.xml  tiago_test.xml  xml_conflicts.xml  xml_paper.xml
discrete_ai/src/nodes/: AIRLabAction_nodes.cpp
discrete_ai/srv/: symbolicPerception.srv
matlab_examples/: aip.m  check_mdp.m  example.m
retail_store_simulation/: CMakeLists.txt  package.xml
retail_store_simulation/launch/: empty.launch  pal_gazebo.launch  tiago_dual_gazebo.launch  tiago_dual_navigation.launch  tiago_simulation.launch
retail_store_simulation/maps/simple_world/: simple_world.yaml
retail_store_simulation/models/0-blender/: cab_2_shelves.dae  room_square_5m.dae
retail_store_simulation/models/aruco_cube_333/: aruco_cube_333.sdf  model.config
retail_store_simulation/models/aruco_cube_333/meshes/: aruco_cube_5cm.dae
retail_store_simulation/models/aruco_marker_original_111/: aruco_marker_original.sdf  model.config
retail_store_simulation/models/aruco_marker_original_111/material/scripts/: aruco_marker_original.material
retail_store_simulation/models/cab_2_shelves/: model.config  model.sdf
retail_store_simulation/models/room_square_5m/: model.config  model.sdf
retail_store_simulation/worlds/: empty.world  simple_world.world
singularity_environment/: Dockerfile  README.md  Singularity  build.sh  docker_build.sh  retail_store_lightweight_sim.repos
